argocd/apps/demo/demo-app-go/overlays/production/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app-virtualservice
spec:
  gateways:
    - webapp-prod/webapp-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: webapp-svc.webapp-prod.svc.cluster.local
